# core

./: .gitignore  Cargo.toml  README-crates.md  README.md
.github/workflows/: ironshield-core-ci-cd.yml
src/: lib.rs  solve.rs  verify.rs
src/js/: js_solve.rs  js_verify.rs
src/js_bindings/: js_solve.rs  js_verify.rs  mod.rs
