[package]
name = "ironshield-core"
version = "0.1.0"
edition = "2021"
authors = [ "IronShield Developers <software@ironshield.cloud>" ]
description = "IronShield Core Functionality"
repository = "https://github.com/IronShield-Tech/IronShield"
license = "Apache-2.0"
readme = "README.md"
keywords = ["proof-of-work", "pow", "ddos", "firewall", "crypto"]
categories = ["cryptography", "algorithms", "concurrency"]

[dependencies]
# Shared dependencies
ironshield-types = { path = "../ironshield-types", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono.workspace = true
sha2.workspace = true

# Workspace specific dependencies
rayon = { version = "1.8", optional = true }
rand = "0.8"

[lib]
name = "ironshield_core"
path = "src/lib.rs"

[features]
default = ["parallel"]
# Core features
parallel = ["rayon"] 
# Testing features - use inverted logic
no-parallel = []  # Disables parallel when enabled