[package]
name = "ironshield-core"
version = "0.2.5"
edition = "2021"
authors = [ "IronShield Developers <software@ironshield.cloud>" ]
description = "Enterprise-Grade Edge-Native Scraping & L7 DDoS Firewall with Stateless PoW, Bot Fingerprinting, and Origin-Shielding"
repository = "https://github.com/IronShield-Tech/ironshield-core"
license = "Apache-2.0"
readme = "README-crates.md"
keywords = ["proof-of-work", "pow", "ddos", "firewall", "crypto"]
categories = ["cryptography", "algorithms", "concurrency"]

[dependencies]
ironshield-types = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22.1"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"

# Workspace specific dependencies
rayon = { version = "1.8", optional = true }
rand = "0.8"

[lib]
name = "ironshield_core"
path = "src/lib.rs"

[features]
default = ["parallel"]
# Core features
parallel = ["rayon"] 
# Testing features - use inverted logic
no-parallel = []  # Disables parallel when enabled
